# MarchingTets

./: .config.env  .config.md  .gitignore  CMakeLists.txt  ENV.txt  Issues.txt  Makefile  README.md  clean  compile  execute  main2.cpp  run.sh
misc/build_output/: output_adding_qt5.txt  output_example_mesh.txt  output_marching_cubes.txt  output_meshAndCube.txt  output_my_qt5.txt  output_simple_mesh.txt
misc/notes/: PointTest.md
misc/py/: findFileBYNumber.py
notes/: Chapter3.md  ResearchAreas.md
projects/1_example_mesh/: CMakeLists.txt
projects/1_example_mesh/src/: ColoredElevationMap.cpp
projects/1_marching_cubes/: CMakeLists.txt
projects/1_marching_cubes/src/: Application.cxx  Main.cxx  Settings.h
projects/1_marching_cubes/src/UI/: UIManager.h
projects/1_marching_cubes/src/UI/Buttons/: ButtonBehavior.cxx  ButtonBehavior.h  HWButton.cxx
projects/2_mc_test_1/src/: Application.h
projects/2_mc_test_1/src/MCubes/: MCGenerator.cxx  MCGenerator.h
projects/2_mc_test_1/src/UI/: MainQTWindow.cxx  QTWindow.h  UIManager.h
projects/2_mc_test_1/src/UI/Buttons/: CloseScreenButton.h
projects/2_simple_mesh/: CMakeLists.txt
projects/2_simple_mesh/src/: ApplicationWindow.cpp  ApplicationWindow.h  MarchingTets.cpp  mtMesh.cpp  mtMesh.h
projects/3_adding_qt5/: CMakeLists.txt
projects/3_adding_qt5/src/: SideBySideRenderWindowsQt.cxx  SideBySideRenderWindowsQtDriver.cxx
projects/3_adding_qt5/src/debug/: log.h
projects/3_marching_cubes_test_2/: ENV.txt  TonyDesign.ui
projects/3_marching_cubes_test_2/src/: Main.cxx
projects/3_marching_cubes_test_2/src/Data/: Mesh.h  Vector.h
projects/3_marching_cubes_test_2/src/Helper/: Conversion.cxx  Conversion.h  Debug.h  Settings.cxx  Settings.h
projects/3_marching_cubes_test_2/src/MCubes/: LookUpTable.cxx  MCGenerator.h
projects/3_marching_cubes_test_2/src/UI/: MTWindowScene.h
projects/3_marching_cubes_test_2/src/UI/Buttons/: HWButton.h
projects/4_meshAndCube/: CMakeLists.txt
projects/4_meshAndCube/src/: LWindow.cxx  LWindow.h  MainQTWindow.cxx  MainQTWindow.h  MeshScene.cxx  MeshScene.h  MyItem.h  RWindow.cxx  RWindow.h  TonyDesign.ui  UIManager.cxx  UIManager.h  main.cxx
projects/4_meshAndCube/src/Buttons/: HWButton.cxx  HWButton.h
projects/4_meshAndCube/src/UI/: MainQTWindow.h  QTWindow.cxx  UIElement.h  UIManager.cxx  UIManager.h
projects/4_meshAndCube/src/UI/Buttons/: CloseScreenButton.cxx  HWButton.h
projects/4_meshAndCube/src/data/: Mesh.cxx
projects/4_my_qt5/: CMakeLists.txt
projects/5_marching_cubes/: CMakeLists.txt  ENV.txt
projects/5_marching_cubes/src/: Application.cxx  Application.h  CubeScene.h  Debug.h  MyItem.cxx  Settings.cxx  Settings.h  main.cxx
projects/5_marching_cubes/src/Data/: Point.h
projects/5_marching_cubes/src/MCubes/: LookUpTable.cxx  LookUpTable.h  MCGenerator.cxx  MCGenerator.h
projects/5_marching_cubes/src/Scene/: CubeScene.cxx  MeshScene.h
projects/5_marching_cubes/src/UI/: TonyDesign.ui  UIManager.cxx
projects/5_marching_cubes/src/UI/Buttons/: CloseScreenButton.cxx  CloseScreenButton.h
projects/5_marching_cubes/src/data/: Mesh.cxx  Mesh.h
projects/6_reload_capabilities/src/: Application.cxx  Main.cxx
projects/6_reload_capabilities/src/Scene/: CubeScene.h
projects/6_reload_capabilities/src/UI/: TonyDesign.ui  UIManager.cxx
src/: ApplicationWindow.cpp  CylinderExample.cxx  MarchingTets.cpp  MarchingTets.h  main.cpp
